# GartenSpace24

./: .env.example  .gitignore  Dockerfile  README.md  data_injection.py  docker-compose.yaml  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  stuff.txt  test.py
app/: config.py  db.py  layout.js  main.py  middleware.py  models.py  oauth2.py  page.js  utils.py
app/advert/: router.py  schemas.py
app/anfragen/: page.js
app/anzeigen/: page.js
app/auth/: oauth2.py  router.py  schemas.py
app/authlogin/: page.js
app/authprofile/: Profile.js  page.js
app/authsignup/: page.js
app/dashboard/: page.js
app/db/: mongodb.py  postgres.py  postgrestables.py
app/entities/: router.py  schemas.py
app/entities2/: router.py  schemas.py
app/google/: router.py  schemas.py
app/login/: page.js
app/models/: entitymodels.py  googlemodels.py  usermodels.py
backend/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
backend/app/: config.py  db.py
backend/app/advert/: schemas.py
backend/app/entities/: router.py
backend/app/google/: router.py
backend/tests/: psqlconfig.py  test_advert.py  test_auth.py  test_entities.py
backend/tests/data/: adverts.json  entities.json
components/: DropDownMenu.js  ErrorMessage.js  Features.js  Footer.js  Nav.js  ProtectedRoute.js  SearchBar.js
context/: AuthContext.js
frontend/: Dockerfile  package-lock.json
styles/: globals.css
tests/: modbconfig.py  psqlconfig.py  test_advert.py  test_auth.py  test_entities.py  test_googleauth.py
(+91 files in other folders)
