[project]
name = "elts-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.12"
dependencies = [
    "fastapi>=0.115.6",
    "google-auth-oauthlib>=1.2.1",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.10.4",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2.0",
    "google-api-python-client>=2.156.0",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
]
